# FickScheisRobotik2

./: mars_plugin.py
bonus/: abgabe.tex
uebung1/: abgabe.tex  behavior.py
uebung1/Vorlage/: mat.cls
uebung2/: abgabe.tex
uebung2/python/: .behavior.py.swp  behavior.py  mars_plugin.py
uebung3/: abgabe.tex  behavior.py
uebung3/py/: behavior.py
uebung4/: abgabe.tex  info.txt
uebung4/python/: behavior.py  mars_plugin.py
uebung5/: abgabe.tex
uebung5/mars/: configWindows.yml  mars_Config.yaml  mars_Graphics.yaml  mars_Gui.yaml  mars_Simulator.yaml  mars_Windows.yaml  other_libs.txt  other_libs.txt.example  pypath.yml
uebung5/mars/models/: raeume.scene  raeume.scn  rolli.scene  rolli.scn  rolli.smurfs  sun.yml
uebung5/mars/py_intersection/: CMakeLists.txt  build.sh
uebung5/mars/py_intersection/src/: IntersectLib.cpp  IntersectLib.h
uebung5/mars/python/: astar.py  behavior.py  intersect.so_mac  mars_plugin.py  particlefilter.py
